# TheRock

./: .gitmodules  BUILD_TOPOLOGY.toml  CMakeLists.txt  FLAGS.cmake  README.md  RELEASES.md  requirements-test.txt  requirements.txt  version.json
.github/: CODEOWNERS
.github/workflows/: build_linux_jax_wheels.yml  build_native_linux_packages.yml  build_portable_linux_artifacts.yml  build_portable_linux_python_packages.yml  build_portable_linux_pytorch_wheels.yml  build_windows_artifacts.yml  build_windows_python_packages.yml  build_windows_pytorch_wheels.yml  build_windows_pytorch_wheels_ci.yml  bump_submodules.yml  ci.yml  ci_linux.yml  ci_nightly.yml  ci_tsan.yml  ci_windows.yml  copy_release.yml  hip_tagging_automation.yml  manifest-diff.yml  multi_arch_build_native_linux_packages.yml  multi_arch_build_portable_linux.yml  multi_arch_build_portable_linux_artifacts.yml  multi_arch_build_windows.yml  multi_arch_build_windows_artifacts.yml  multi_arch_ci.yml  multi_arch_ci_linux.yml  multi_arch_ci_windows.yml  release_portable_linux_jax_wheels.yml  release_portable_linux_packages.yml  release_portable_linux_pytorch_wheels.yml  release_windows_packages.yml  release_windows_pytorch_wheels.yml  setup.yml  setup_multi_arch.yml  test_artifacts.yml  test_component.yml  test_linux_jax_wheels.yml  test_pytorch_wheels.yml  test_pytorch_wheels_full.yml  unit_tests.yml
base/: CMakeLists.txt  artifact.toml
base/aux-overlay/: CMakeLists.txt
build_tools/: artifact_manager.py  build_python_packages.py  bump_submodules.py  compute_rocm_package_version.py  configure_stage.py  fetch_sources.py  find_artifacts_for_commit.py  find_latest_artifacts.py  generate_manifest_diff_report.py  generate_s3_index.py  generate_therock_manifest.py  index_generation_s3_tar.py  install_additional_requirements.py  install_rocm_from_artifacts.py  manifest_diff_report_template.html  memory_monitor.py  setup_ccache.py  setup_git_mirrors.py  setup_venv.py  topology_to_cmake.py
build_tools/_therock_utils/: artifact_backend.py  artifact_builder.py  build_topology.py  git_mirrors.py  storage_backend.py  workflow_outputs.py
build_tools/github_actions/: amdgpu_family_matrix.py  build_configure.py  bump_automation.py  compute_jax_package_version.py  configure_ci.py  configure_multi_arch_ci.py  configure_multi_arch_ci_summary.py  configure_target_run.py  detect_external_repo_config.py  determine_version.py  fetch_job_status.py  fetch_package_targets.py  fetch_test_configurations.py  generate_jax_manifest.py  generate_pytorch_manifest.py  github_actions_api.py  github_actions_utils.py  manifest_utils.py  manylinux_config.py  new_amdgpu_family_matrix.py  post_build_upload.py  post_stage_upload.py  print_test_reproduction_steps.py  promote_wheels_based_on_policy.py  python_to_cp_version.py  reproduce_test_failure.py  summarize_test_pytorch_workflow.py  upload_jax_manifest.py  upload_python_packages.py  upload_test_report_script.py  workflow_summary.py  write_jax_versions.py  write_torch_versions.py
build_tools/github_actions/test_executable_scripts/: README.md  test_amdsmi.py  test_fusilliprovider.py  test_hecbench_spirv.py  test_hipblas.py  test_hipblaslt.py  test_hipblasltprovider.py  test_hipcub.py  test_hipdnn_install.py  test_hipfft.py  test_hipsparse.py  test_hipsparselt.py  test_hiptests.py  test_miopen.py  test_miopenprovider.py  test_rccl.py  test_rocblas.py  test_rocdecode.py  (+15 more)
build_tools/packaging/: download_prerelease_packages.py  promote_from_rc_to_final.py
build_tools/tests/: artifact_backend_test.py  artifact_manager_tool_test.py  build_topology_test.py  fetch_sources_mirror_test.py  find_artifacts_for_commit_test.py  find_latest_artifacts_test.py  generate_manifest_diff_report_test.py  generate_s3_index_test.py  git_mirrors_test.py  memory_monitor_test.py  setup_git_mirrors_test.py  storage_backend_test.py  workflow_outputs_test.py
cmake/: therock_amdgpu_targets.cmake  therock_meson_env.cmake  therock_subproject.cmake  therock_subproject_dep_provider.cmake
comm-libs/: CMakeLists.txt  artifact-rccl.toml  artifact-rocshmem.toml  pre_hook_rccl.cmake
compiler/: CMakeLists.txt  artifact-amd-llvm.toml  artifact-hipify.toml  pre_hook_amd-comgr.cmake  pre_hook_amd-llvm.cmake
core/: CMakeLists.txt  artifact-core-amdsmi.toml  artifact-core-hip.toml  artifact-core-hiptests.toml  artifact-core-kpack.toml  artifact-core-ocl-icd.toml  artifact-core-ocl.toml  artifact-core-rocrtst.toml  artifact-core-runtime.toml
dctools/: artifact-rdc.toml
debug-tools/: artifact-amd-dbgapi.toml  artifact-rocgdb.toml  artifact-rocr-debug-agent.toml
docs/development/: README.md  artifacts.md  ci_behavior_manipulation.md  development_guide.md  git_chores.md  git_mirror_setup.md  s3_buckets.md  test_environment_reproduction.md  test_filtering.md  windows_support.md  workflow_outputs.md
docs/packaging/: native_packaging.md
docs/rfcs/: README.md  RFC0009-OS-Packaging-Requirements.md  RFC0010-Test-Scripts-Migration.md
external-builds/jax/: README.md
external-builds/pytorch/: README.md  build_prod_wheels.py  generate_test_sharding_matrix.py  pytorch_triton_repo.py  pytorch_utils.py  run_pytorch_tests.py  run_pytorch_tests_full.py
hecbench-spirv/: CMakeLists.txt
hecbench-spirv/project/: CMakeLists.txt  build_hecbench_spirv.py  hecbench_spirv_skipped_benchmarks.txt
iree-libs/: CMakeLists.txt  artifact-fusilliprovider.toml  artifact-iree-compiler.toml
math-libs/: CMakeLists.txt  artifact-fft.toml  artifact-libhipcxx.toml  artifact-prim.toml  artifact-rand.toml  artifact-rocwmma.toml
math-libs/BLAS/: CMakeLists.txt  artifact-blas.toml
media-libs/: artifact-rocdecode.toml  artifact-rocjpeg.toml
ml-libs/: CMakeLists.txt  artifact-composable-kernel.toml  artifact-hipblasltprovider.toml  artifact-hipdnn.toml  artifact-miopen.toml  artifact-miopenprovider.toml
profiler/: CMakeLists.txt  artifact-aqlprofile.toml  artifact-rocprofiler-compute.toml  artifact-rocprofiler-sdk.toml  artifact-rocprofiler-systems.toml  post_hook_rocprofiler-sdk.cmake
tests/: test_rocm_sanity.py
tests/extended_tests/: README.md
(+55 files in other folders)
